# libraries

./: CMakeLists.txt  LICENSE  Mat.hpp  MathMisc.hpp  Vec.hpp  array_list.hpp  array_mat.hpp  file_help.hpp  linked_list.hpp  mat.hpp  math_misc.hpp  quat.hpp  user_input.hpp  vec.hpp
References/: Game Physics Tutorial and MLCP PGS Etc.url
src/: array_list.hpp  array_mat.hpp  mat.cpp  mat.h  mat.hpp  math_misc.hpp  quat.cpp  quat.h  quat.hpp  vec.cpp  vec.h  vec.hpp
